--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@supabase/supabase-js": "^2.43.4",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^3.6.0",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
